--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div>Dummy content</div>
+    <div class="grid-container">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+    </div>
 </body>
 </html>
