--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <header>
+        <h1>Tic Tac Toe</h1>
+        <p class="message">Good luck!</p>
+    </header>
     <main>
         <div class="grid-container">
             <div class="cell" id="cell0"></div>
