--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
         <p class="message">Good luck!</p>
     </header>
     <main>
+        <form>
+            <ul>
+                <li>
+                    <label for="player-one">Player One:
+                        <input type="text" id="player-one" name="player_one" placeholder="Bob" required>
+                    </label>
+                </li>
+                <li>
+                    <label for="player-two">Player Two:
+                        <input type="text" id="player-two" name="player_two" placeholder="Jack" required>
+                    </label>
+                </li>
+                <li>
+                    <button type="button" id="start">Start</button>
+                </li>
+            </ul>
+        </form>
+
         <div class="grid-container">
             <div class="cell" id="cell0"></div>
             <div class="cell" id="cell1"></div>
