--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     </label>
                 </li>
                 <li>
-                    <button type="button" id="start">Start</button>
+                    <div class="start-container">
+                        <button type="button" id="start">Start</button>
+                    </div>
                 </li>
             </ul>
         </form>
