--- a/index.html
+++ b/index.html
@@ -18,23 +18,29 @@
     </header>
     <main>
         <form>
-            <ul>
-                <li>
-                    <label for="player-one">Player One:
+            <table>
+                <thead>
+                    <tr>
+                        <th><label for="player-one">Player One's name:</label></th>
+                        <th><label for="player-two">Player Two's name:</label></th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td>
                         <input type="text" id="player-one" name="player_one" placeholder="Bob" required>
-                    </label>
-                </li>
-                <li>
-                    <label for="player-two">Player Two:
+                    </td>
+                    <td>
                         <input type="text" id="player-two" name="player_two" placeholder="Jack" required>
-                    </label>
-                </li>
-                <li>
-                    <div class="start-container">
-                        <button type="button" id="start">Start</button>
-                    </div>
-                </li>
-            </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <div class="start-container">
+                            <button type="button" id="start">Start</button>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </form>
 
         <div class="grid-container">
