--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <tr>
                         <td colspan="2">
                             <div class="start-container">
-                                <button type="submit" id="start">Start</button>
+                                <button type="submit" id="start" class="filter-green">START!</button>
                             </div>
                         </td>
                     </tr>
@@ -56,7 +56,9 @@
             <div class="cell" id="cell7"></div>
             <div class="cell" id="cell8"></div>
         </div>
-        <button id="reset"></button>
+        <button id="reset" class="filter-green">
+            <img src="images/refresh.svg" alt="Reset icon"/>
+        </button>
     </main>
 </body>
 </html>
